<resources>
    <string name="app_name">Login</string>
    <string name="please_enter_the_code_sent_to_your_number">Please enter the code sent to your number :</string>
    <string name="mobile_number_verification">Mobile Number Verification</string>
    <string name="title_activity_user">User</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_user_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_history">History</string>
    <string name="menu_booking_status">Booking Status</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_logout">Logout</string>
    <string name="title_activity_pickup_person">PickupPerson</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">History</string>
    <string name="menu_slideshow">Leave Request</string>
    <string name="menu_tools">Pickup Details</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Logout</string>

    <string-array name="slots">
        <item>10:00AM-12:00PM</item>
        <item>12:00PM-02:00PM</item>
        <item>02:00PM-04:00PM</item>
        <item>04:00PM-06:00PM</item>
    </string-array>

    <string-array name="pickup_status">
        <item>Pending</item>
        <item>Complete</item>
    </string-array>


</resources>
