<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.login.userUi.home.HomeFragment"
        android:label="@string/menu_user_home"
        tools:layout="@layout/fragment_home_user" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.login.userUi.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.login.userUi.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.login.userUi.bookingstatus.BookingStatusFragment"
        android:label="@string/menu_booking_status"
        tools:layout="@layout/fragment_booking_status" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.login.userUi.contactus.ContactUsFragment"
        android:label="@string/menu_contact_us"
        tools:layout="@layout/fragment_contact_us" />


</navigation>